<resources>
    <string name="app_name">Makan</string>
    <string name="tab_text_1">tab1</string>
    <string name="tab_text_2">tab2</string>
    <string name="tab_text_3">tab3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a">TODO</string>
    <string name="descrbtion">This is description of the events in amman</string>
    <string name="notification">Notifications</string>
    <string name="item">Item</string>
    <string name="search">Search</string>
    <string name="k">TODO</string>
    <string name="following">Following</string>
    <string name="Interests">Interests</string>
    <string name="popular">popular</string>
    <string name="restaurant_pizza_hut">restaurant pizza hut</string>
    <string name="amman">Amman</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_your_account">Create your account</string>
    <string name="city">City</string>
    <string name="birth_day">Birth Day</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number">Phone number</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="todo">TODO</string>
    <string name="res">Reservation</string>
    <string name="interests">Interests</string>
    <string name="services">Services</string>
    <string name="my_profile">My Profile</string>
    <string name="check_later">Check later</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="events">Events</string>
    <string name="m">Material is an adaptable system of guidelines, components, and tools that support the best practices of user interface design. Backed by open-source code, Material streamlines collaboration between designers and developers, and helps teams quickly build beautiful products.</string>
    <string name="date">Date :</string>
    <string name="f">Date : 14/5/2020 13:50 PM</string>
    <string name="location_amman">Location : Amman</string>
    <string name="understanding_accessibility">Understanding accessibility</string>
    <string name="about">About</string>
    <string name="remove">Remove this notificatoin</string>
    <string name="turn_off_notifications">Turn off notifications</string>
    <string name="amman_city_mall">Amman, City Mall</string>
    <string name="sunday_13_apr_at_10_30_pm">Sunday, 13 Apr at 10:30 PM</string>
    <string name="log_out">Log Out</string>
    <string name="or_sign_up">OR SIGN UP</string>
    <string name="sign_in_using">you can sign in using</string>
    <string name="_21_00_jd">21.00 JD</string>
    <string name="follow">Follow</string>
    <string name="created_by">Created by</string>
    <string name="tickets">Tickets</string>
    <string name="share">Share</string>
    <string name="learn_more">Learn more</string>
    <string name="nothing_in_reservation">Nothing in Reservation</string>
    <string name="nothing_in_check_later">Nothing in Check later</string>
    <string name="r">4.6 based on 600 review</string>
    <string name="table_reservation">table reservation</string>
    <string name="Amman">Amman</string>
    <string name="unfollow">Unfollow</string>
    <string name="nothing_in_following">Nothing in following</string>
    <string name="choose_3_or_more_interests">Choose 3 or more Interests.</string>
    <string name="food">Food</string>
    <string name="next">Next</string>
    <string name="suggestion_for_you">Suggestion for you</string>
    <string name="contacts">Contacts</string>
    <string name="email_alaa3souqi_gmail_com">Email : alaa3souqi@gmail.com</string>
    <string name="phone_065655328653">Phone : 065655328653</string>
    <string name="party">party</string>
    <string name="musical">musical party</string>
    <string name="jordan_digital_motorsport_cup">Jordan Digital Motorsport Cup</string>
    <string name="going">Going</string>
    <string name="rating">Rating</string>
    <string name="pizza">Pizza</string>
    <string name="your_services">Your services</string>
    <string name="nothing_in_services">Nothing in services</string>
    <string name="event_name">Event Name</string>
    <string name="name_of_event">Name of Event</string>
    <string name="location">Location</string>
    <string name="type_of_event">Type Of Event</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="number_of_tickets">Number of tickets</string>
    <string name="price">Price</string>
    <string name="event">Event</string>
    <string name="restaurant">Restaurant</string>
    <string name="gym">Gym</string>
    <string name="football">Football</string>
    <string name="Mall">Mall</string>
    <string name="description">description</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="type_of_restaurant">Type of Restaurant</string>
    <string name="open_hour">Open Hour</string>
    <string name="close_hour">Close Hour</string>
    <string name="category_name">Category Name</string>
    <string name="finish">Finish</string>
    <string name="item_name">Item Name</string>
    <string name="add">Add</string>
    <string name="send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_address_place_city">Address, Place, City</string>
    <string name="off_day">Off Day</string>
    <string name="enable_payment">Enable Payment</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="policies">Policies</string>
    <string name="before_how_many_days_can_retreat">before how many days can Retreat</string>
    <string name="free">Free</string>
    <string name="payment">Payment</string>
    <string name="enable_booking">Enable Booking</string>
    <string name="table">Table</string>
    <string name="s_pace_of_table">Sٍٍpace of table</string>
    <string name="shopping_name">Shopping Name</string>
    <string name="type_of_shopping">Type of shopping</string>
    <string name="gym_name">Gym Name</string>
    <string name="booking">Booking</string>
    <string name="pitch_name">Pitch Name</string>
    <string name="photo">Photo</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="max_people_in_a_table">Max people in a table</string>
    <string name="number_of_table">Number of Table in the Restaurant</string>
    <string name="the_period_of_automatically_cancel_the_reservation_after_the_start_of_the_reservation_date">The period of cancel the reservation</string>
    <string name="policies_payment">Policies Payment</string>
    <string name="can_retreat">Can Retreat</string>
    <string name="cant_retreat">Can\'t Retreat</string>
    <string name="subscription_period">The subscription period in months</string>
    <string name="the_period_1_month">The period : 1 Month</string>
    <string name="price_30_jd">Price : 30 JD</string>
    <string name="remove1">Remove</string>
    <string name="pitch">Pitch</string>
    <string name="shopping">Shopping</string>
    <string name="all">All</string>
    <string name="_0">0</string>
    <string name="checkout">Checkout</string>
    <string name="total_12_jd">Total : 0 JD</string>
    <string name="polices_n_nyou_can_retreat_your_money_before_5_days_of_the_event_start">Polices : \n\nYou can retreat your money before 5 days of the event start</string>
    <string name="polices_n_nyou_can_retreat_before_start_your_subscription">Polices : \n\nYou can retreat before start your subscription.</string>
    <string name="off_days_friday_saturday">Off Days : Friday, Saturday</string>
    <string name="start_subscription">Start subscription</string>
    <string name="period_60_minutes_price">Period : 60 minutes price :</string>
    <string name="period_90_minutes_price">Period : 90 minutes price :</string>
    <string name="period_120_minutes_price">Period : 120 minutes price :</string>
    <string name="hour">Hour</string>
    <string name="pm">PM</string>
    <string name="email0">Email : </string>
    <string name="phone0">Phone : </string>
    <string name="start">Start : </string>
    <string name="end">End : </string>
    <string name="near_you">Near You</string>
    <string name="please_click_on_map_to_pick_your_service_location">Please click on map to pick your service location</string>
    <string name="title">Title</string>
    <string name="offer_title">Offer Title</string>
    <string name="offer_description">Offer Description</string>
    <string name="offer_type">Offer Type</string>
    <string name="t">Type</string>
    <string name="coupon_number">Coupon number</string>
    <string name="coupon_percentage_discount">Coupon Percentage discount</string>
    <string name="statistics">Statistics</string>
    <string name="gallery">Gallery</string>
    <string name="edit_information">Edit Information</string>
    <string name="_1">1</string>
    <string name="add_offer">Add Offer</string>
    <string name="noting_in_menu">Noting in menu</string>
    <string name="add_category">Add category</string>
    <string name="confirm_update">Confirm Update</string>
    <string name="store">Store</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="replay_new_password">Replay New Password</string>
    <string name="save_change">Save Change</string>
    <string name="change_password">Change Password</string>
    <string name="monitor">Monitor</string>
    <string name="tickets_number">Tickets number</string>
    <string name="open">Open</string>
    <string name="limited">Limited</string>
    <string name="edit_subscription">Edit subscription</string>

</resources>
